// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Compact LocalNavigation renders a stable snapshot 1`] = `
<View
  style={
    {
      "backgroundColor": "#383838",
      "padding": 40,
    }
  }
>
  <View
    style={
      [
        {
          "alignSelf": "baseline",
          "overflow": "hidden",
        },
        {
          "aspectRatio": "auto",
        },
        [
          {
            "backgroundColor": "#ffffff",
          },
          {
            "alignSelf": "auto",
          },
        ],
      ]
    }
    testID="background"
  >
    <View
      style={
        [
          false,
          {
            "paddingBottom": 12,
            "paddingHorizontal": 8,
            "paddingTop": 12,
          },
        ]
      }
    >
      <View>
        <View
          style={
            [
              {
                "flexDirection": "row",
                "justifyContent": "space-between",
              },
              false,
            ]
          }
        >
          <View
            style={
              [
                {
                  "alignItems": "flex-start",
                },
                {
                  "maxWidth": 24,
                  "minHeight": 32,
                  "paddingTop": 4,
                },
              ]
            }
          >
            <View>
              <Text
                onPress={[Function]}
                role="button"
                style={
                  {
                    "display": "flex",
                    "fontFamily": "odido_Paragraph_Link",
                    "fontSize": 16,
                    "letterSpacing": 0.23999999463558197,
                    "lineHeight": 24,
                    "overflow": "visible",
                  }
                }
                testID="link"
              >
                <View
                  style={
                    [
                      {
                        "alignItems": "center",
                        "columnGap": 8,
                        "flexDirection": "row",
                        "gap": 8,
                      },
                    ]
                  }
                >
                  <View
                    style={
                      {
                        "alignItems": "center",
                        "justifyContent": "center",
                      }
                    }
                  >
                    <Text
                      allowFontScaling={true}
                      style={
                        [
                          {
                            "fontFamily": "Icons_Outline_DEFAULT_odido",
                            "fontSize": 24,
                            "lineHeight": 24,
                            "width": 24,
                          },
                          [
                            {
                              "color": "#1b5ee4",
                              "display": "flex",
                              "verticalAlign": "middle",
                            },
                            undefined,
                            false,
                          ],
                        ]
                      }
                      testID="link-icon"
                    >
                      
                    </Text>
                  </View>
                </View>
              </Text>
            </View>
          </View>
          <Text
            allowFontScaling={true}
            style={
              [
                {
                  "fontFamily": "odido_Heading_Medium",
                },
                {
                  "color": "#000000",
                  "fontSize": 36,
                  "fontWeight": "500",
                  "letterSpacing": 0.36000001430511475,
                  "lineHeight": 40,
                  "marginVertical": 0,
                  "textAlign": "left",
                },
                [
                  {
                    "color": "#000000",
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "textAlign": "center",
                  },
                  {
                    "fontSize": 28,
                    "letterSpacing": 0.2800000011920929,
                    "lineHeight": 32,
                    "paddingTop": 0,
                  },
                ],
              ]
            }
            testID="undefined-title_heading"
          >
            Title
          </Text>
          <View
            style={
              [
                {
                  "alignItems": "flex-end",
                },
                {
                  "maxWidth": 24,
                  "minHeight": 32,
                  "paddingTop": 4,
                },
              ]
            }
          >
            <View>
              <Text
                onPress={[Function]}
                role="button"
                style={
                  {
                    "display": "flex",
                    "fontFamily": "odido_Paragraph_Link",
                    "fontSize": 16,
                    "letterSpacing": 0.23999999463558197,
                    "lineHeight": 24,
                    "overflow": "visible",
                  }
                }
                testID="link"
              >
                <View
                  style={
                    [
                      {
                        "alignItems": "center",
                        "columnGap": 8,
                        "flexDirection": "row",
                        "gap": 8,
                      },
                    ]
                  }
                >
                  <View
                    style={
                      {
                        "alignItems": "center",
                        "justifyContent": "center",
                      }
                    }
                  >
                    <Text
                      allowFontScaling={true}
                      style={
                        [
                          {
                            "fontFamily": "Icons_Outline_DEFAULT_odido",
                            "fontSize": 24,
                            "lineHeight": 24,
                            "width": 24,
                          },
                          [
                            {
                              "color": "#1b5ee4",
                              "display": "flex",
                              "verticalAlign": "middle",
                            },
                            undefined,
                            false,
                          ],
                        ]
                      }
                      testID="link-icon"
                    >
                      
                    </Text>
                  </View>
                </View>
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Default LocalNavigation renders a stable snapshot 1`] = `
<View
  style={
    {
      "backgroundColor": "#383838",
      "padding": 40,
    }
  }
>
  <View
    style={
      [
        {
          "alignSelf": "baseline",
          "overflow": "hidden",
        },
        {
          "aspectRatio": "auto",
        },
        [
          {
            "backgroundColor": "#ffffff",
          },
          {
            "alignSelf": "auto",
          },
        ],
      ]
    }
    testID="background"
  >
    <View
      style={
        [
          {
            "paddingBottom": 12,
            "paddingHorizontal": 8,
            "paddingTop": 8,
            "rowGap": 8,
          },
          false,
        ]
      }
    >
      <View>
        <View
          style={
            [
              {
                "flexDirection": "row",
                "justifyContent": "space-between",
              },
              {
                "minHeight": 40,
                "paddingTop": 4,
              },
            ]
          }
        >
          <View
            style={
              [
                {
                  "alignItems": "flex-start",
                },
                false,
              ]
            }
          >
            <View>
              <Text
                onPress={[Function]}
                role="button"
                style={
                  {
                    "display": "flex",
                    "fontFamily": "odido_Paragraph_Link",
                    "fontSize": 16,
                    "letterSpacing": 0.23999999463558197,
                    "lineHeight": 24,
                    "overflow": "visible",
                  }
                }
                testID="link"
              >
                <View
                  style={
                    [
                      {
                        "alignItems": "center",
                        "columnGap": 8,
                        "flexDirection": "row",
                        "gap": 8,
                      },
                    ]
                  }
                >
                  <View
                    style={
                      {
                        "alignItems": "center",
                        "justifyContent": "center",
                      }
                    }
                  >
                    <Text
                      allowFontScaling={true}
                      style={
                        [
                          {
                            "fontFamily": "Icons_Outline_DEFAULT_odido",
                            "fontSize": 24,
                            "lineHeight": 24,
                            "width": 24,
                          },
                          [
                            {
                              "color": "#1b5ee4",
                              "display": "flex",
                              "verticalAlign": "middle",
                            },
                            undefined,
                            false,
                          ],
                        ]
                      }
                      testID="link-icon"
                    >
                      
                    </Text>
                  </View>
                  <Text
                    style={
                      [
                        {
                          "textDecorationLine": "underline",
                          "textDecorationStyle": "solid",
                        },
                        {
                          "color": "#1b5ee4",
                        },
                        {
                          "fontSize": 16,
                          "letterSpacing": 0.23999999463558197,
                          "lineHeight": 24,
                        },
                        {
                          "textDecorationLine": "none",
                          "textDecorationStyle": "solid",
                        },
                        false,
                        undefined,
                      ]
                    }
                    testID="link-text"
                  >
                    Terug
                  </Text>
                </View>
              </Text>
            </View>
          </View>
          <View
            style={
              [
                {
                  "alignItems": "flex-end",
                },
                false,
              ]
            }
          >
            <View>
              <Text
                onPress={[Function]}
                role="button"
                style={
                  {
                    "display": "flex",
                    "fontFamily": "odido_Paragraph_Link",
                    "fontSize": 16,
                    "letterSpacing": 0.23999999463558197,
                    "lineHeight": 24,
                    "overflow": "visible",
                  }
                }
                testID="link"
              >
                <View
                  style={
                    [
                      {
                        "alignItems": "center",
                        "columnGap": 8,
                        "flexDirection": "row",
                        "gap": 8,
                      },
                    ]
                  }
                >
                  <Text
                    style={
                      [
                        {
                          "textDecorationLine": "underline",
                          "textDecorationStyle": "solid",
                        },
                        {
                          "color": "#1b5ee4",
                        },
                        {
                          "fontSize": 16,
                          "letterSpacing": 0.23999999463558197,
                          "lineHeight": 24,
                        },
                        {
                          "textDecorationLine": "none",
                          "textDecorationStyle": "solid",
                        },
                        false,
                        undefined,
                      ]
                    }
                    testID="link-text"
                  >
                    Action right
                  </Text>
                  <View
                    style={
                      {
                        "alignItems": "center",
                        "justifyContent": "center",
                      }
                    }
                  >
                    <Text
                      allowFontScaling={true}
                      style={
                        [
                          {
                            "fontFamily": "Icons_Outline_DEFAULT_odido",
                            "fontSize": 24,
                            "lineHeight": 24,
                            "width": 24,
                          },
                          [
                            {
                              "color": "#1b5ee4",
                              "display": "flex",
                              "verticalAlign": "middle",
                            },
                            undefined,
                            false,
                          ],
                        ]
                      }
                      testID="link-icon"
                    >
                      
                    </Text>
                  </View>
                </View>
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          {
            "rowGap": 8,
          }
        }
      >
        <Text
          allowFontScaling={true}
          style={
            {
              "color": "#000000",
              "fontFamily": "odido_Display",
              "fontSize": 48,
              "letterSpacing": 0,
              "lineHeight": 48,
              "marginBottom": 0,
              "marginTop": 0,
              "marginVertical": 32,
              "textAlign": "left",
            }
          }
          testID="undefined-title_display"
        >
          Title
        </Text>
        <Text
          allowFontScaling={true}
          style={
            [
              {
                "fontFamily": "odido_Paragraph_Regular",
              },
              {
                "color": "#000000",
                "fontSize": 18,
                "letterSpacing": 0.27000001072883606,
                "lineHeight": 28,
                "textAlign": "left",
              },
              undefined,
            ]
          }
          testID="undefined-paragraph_paragraph"
        >
          Paragraph
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`Emphasised LocalNavigation renders a stable snapshot 1`] = `
<View
  style={
    {
      "backgroundColor": "#383838",
      "padding": 40,
    }
  }
>
  <View
    style={
      [
        {
          "alignSelf": "baseline",
          "overflow": "hidden",
        },
        {
          "aspectRatio": "auto",
        },
        [
          {
            "backgroundColor": "#00000000",
          },
          {
            "alignSelf": "auto",
          },
        ],
      ]
    }
    testID="background"
  >
    <View
      style={
        [
          {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          {
            "zIndex": -1,
          },
        ]
      }
      testID="glow-gradient"
    >
      <RNSVGSvgView
        align="xMidYMid"
        bbHeight="100%"
        bbWidth="100%"
        fill="none"
        focusable={false}
        height="100%"
        meetOrSlice={1}
        minX={0}
        minY={0}
        style={
          [
            {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            {
              "flex": 0,
              "height": "100%",
              "width": "100%",
            },
          ]
        }
        vbHeight={1080}
        vbWidth={960}
        width="100%"
      >
        <RNSVGGroup
          fill={null}
          propList={
            [
              "fill",
            ]
          }
        >
          <RNSVGGroup
            fill={
              {
                "payload": 4278190080,
                "type": 0,
              }
            }
          >
            <RNSVGGroup
              clipPath="clip0"
              fill={
                {
                  "payload": 4278190080,
                  "type": 0,
                }
              }
            >
              <RNSVGPath
                d="M960 0H0v1080h960V0z"
                fill={
                  {
                    "brushRef": "paint0_linear_70_1095",
                    "type": 1,
                  }
                }
                propList={
                  [
                    "fill",
                  ]
                }
              />
              <RNSVGPath
                d="M960 0H0v1080h960V0z"
                fill={
                  {
                    "brushRef": "paint1_radial_70_1095",
                    "type": 1,
                  }
                }
                propList={
                  [
                    "fill",
                  ]
                }
              />
              <RNSVGPath
                d="M960 0H0v1080h960V0z"
                fill={
                  {
                    "brushRef": "paint2_radial_70_1095",
                    "type": 1,
                  }
                }
                propList={
                  [
                    "fill",
                  ]
                }
              />
              <RNSVGPath
                d="M960 0H0v1080h960V0z"
                fill={
                  {
                    "brushRef": "paint3_radial_70_1095",
                    "type": 1,
                  }
                }
                propList={
                  [
                    "fill",
                  ]
                }
              />
              <RNSVGPath
                d="M960 0H0v1080h960V0z"
                fill={
                  {
                    "brushRef": "paint4_radial_70_1095",
                    "type": 1,
                  }
                }
                propList={
                  [
                    "fill",
                  ]
                }
              />
              <RNSVGPath
                d="M960 0H0v1080h960V0z"
                fill={
                  {
                    "brushRef": "paint5_radial_70_1095",
                    "type": 1,
                  }
                }
                propList={
                  [
                    "fill",
                  ]
                }
              />
              <RNSVGPath
                d="M960 0H0v1080h960V0z"
                fill={
                  {
                    "brushRef": "paint6_radial_70_1095",
                    "type": 1,
                  }
                }
                propList={
                  [
                    "fill",
                  ]
                }
              />
            </RNSVGGroup>
            <RNSVGDefs>
              <RNSVGLinearGradient
                gradient={
                  [
                    0,
                    -10702935,
                    0.493323,
                    -5719882,
                  ]
                }
                gradientTransform={null}
                gradientUnits={1}
                name="paint0_linear_70_1095"
                x1={0}
                x2={960}
                y1={540}
                y2={540}
              />
              <RNSVGRadialGradient
                cx={0}
                cy={0}
                fx={0}
                fy={0}
                gradient={
                  [
                    0,
                    -19783,
                    0.574124,
                    -858015301,
                    1,
                    14399931,
                  ]
                }
                gradientTransform={
                  [
                    -960,
                    0,
                    0,
                    -513.965,
                    960,
                    70.237,
                  ]
                }
                gradientUnits={1}
                name="paint1_radial_70_1095"
                rx={1}
                ry={1}
              />
              <RNSVGRadialGradient
                cx={0}
                cy={0}
                fx={0}
                fy={0}
                gradient={
                  [
                    0,
                    -19783,
                    0.555385,
                    -855657799,
                    1,
                    16757433,
                  ]
                }
                gradientTransform={
                  [
                    267.3265250873247,
                    -225.2055437167033,
                    268.3319698025894,
                    318.51903764588747,
                    910.4237990081651,
                    765.2083362494316,
                  ]
                }
                gradientUnits={1}
                name="paint2_radial_70_1095"
                rx={1}
                ry={1}
              />
              <RNSVGRadialGradient
                cx={0}
                cy={0}
                fx={0}
                fy={0}
                gradient={
                  [
                    0.100755,
                    -19783,
                    1,
                    16757433,
                  ]
                }
                gradientTransform={
                  [
                    0,
                    450.748,
                    -730.944,
                    0,
                    1085.51,
                    397.157,
                  ]
                }
                gradientUnits={1}
                name="paint3_radial_70_1095"
                rx={1}
                ry={1}
              />
              <RNSVGRadialGradient
                cx={0}
                cy={0}
                fx={0}
                fy={0}
                gradient={
                  [
                    0,
                    -19783,
                    0.561177,
                    -855657799,
                    0.906892,
                    16757433,
                  ]
                }
                gradientTransform={
                  [
                    0,
                    604.749,
                    -991.173,
                    0,
                    960,
                    -84.854,
                  ]
                }
                gradientUnits={1}
                name="paint4_radial_70_1095"
                rx={1}
                ry={1}
              />
              <RNSVGRadialGradient
                cx={0}
                cy={0}
                fx={0}
                fy={0}
                gradient={
                  [
                    0.399652,
                    -28597,
                    0.741622,
                    -28597,
                    1,
                    15707784,
                  ]
                }
                gradientTransform={
                  [
                    0,
                    523.113,
                    -1084.59,
                    0,
                    1010.43,
                    1080,
                  ]
                }
                gradientUnits={1}
                name="paint5_radial_70_1095"
                rx={1}
                ry={1}
              />
              <RNSVGRadialGradient
                cx={0}
                cy={0}
                fx={0}
                fy={0}
                gradient={
                  [
                    0.334739,
                    -33491,
                    1,
                    16743725,
                  ]
                }
                gradientTransform={
                  [
                    0,
                    -468.557,
                    272.64,
                    0,
                    960,
                    1080,
                  ]
                }
                gradientUnits={1}
                name="paint6_radial_70_1095"
                rx={1}
                ry={1}
              />
              <RNSVGClipPath
                fill={
                  {
                    "payload": 4278190080,
                    "type": 0,
                  }
                }
                name="clip0"
              >
                <RNSVGPath
                  d="M0 0H960V1080H0z"
                  fill={
                    {
                      "payload": 4294967295,
                      "type": 0,
                    }
                  }
                  propList={
                    [
                      "fill",
                    ]
                  }
                />
              </RNSVGClipPath>
            </RNSVGDefs>
          </RNSVGGroup>
        </RNSVGGroup>
      </RNSVGSvgView>
    </View>
    <View
      style={
        [
          false,
          {
            "paddingBottom": 12,
            "paddingHorizontal": 8,
            "paddingTop": 12,
          },
        ]
      }
    >
      <View>
        <View
          style={
            [
              {
                "flexDirection": "row",
                "justifyContent": "space-between",
              },
              false,
            ]
          }
        >
          <View
            style={
              [
                {
                  "alignItems": "flex-start",
                },
                {
                  "minHeight": 32,
                  "paddingTop": 0,
                },
              ]
            }
          >
            <View>
              <View
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": false,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                role="button"
                style={
                  [
                    {
                      "alignSelf": "flex-start",
                    },
                    undefined,
                  ]
                }
                testID="undefined-left-action-button-left_button"
              >
                <View
                  collapsable={false}
                  jestAnimatedStyle={
                    {
                      "value": {
                        "backgroundColor": "rgba(255, 255, 255, 1)",
                        "borderColor": "rgba(0, 0, 0, 0)",
                      },
                    }
                  }
                  style={
                    {
                      "alignItems": "center",
                      "alignSelf": "flex-start",
                      "backgroundColor": "rgba(255, 255, 255, 1)",
                      "borderColor": "rgba(0, 0, 0, 0)",
                      "borderRadius": 100,
                      "borderStyle": "solid",
                      "borderWidth": 0,
                      "flexDirection": "row",
                      "gap": 8,
                      "justifyContent": "center",
                      "paddingHorizontal": 16,
                      "paddingVertical": 8,
                    }
                  }
                  testID="undefined-left-action-button-left_button-visual"
                >
                  <View
                    onLayout={[Function]}
                    style={
                      {
                        "alignItems": "center",
                        "flexDirection": "row",
                        "gap": 8,
                        "justifyContent": "center",
                      }
                    }
                  >
                    <Text>
                      <Text
                        collapsable={false}
                        jestAnimatedStyle={
                          {
                            "value": {
                              "color": "rgba(0, 0, 0, 1)",
                            },
                          }
                        }
                        style={
                          {
                            "color": "rgba(0, 0, 0, 1)",
                          }
                        }
                      >
                        <Text
                          allowFontScaling={true}
                          style={
                            [
                              {
                                "fontFamily": "Icons_Outline_SM_odido",
                                "fontSize": 16,
                                "lineHeight": 16,
                                "width": 16,
                              },
                              [
                                {
                                  "display": "flex",
                                },
                                false,
                              ],
                            ]
                          }
                          testID="base-button-icon"
                        >
                          
                        </Text>
                      </Text>
                    </Text>
                  </View>
                </View>
              </View>
            </View>
          </View>
          <Text
            allowFontScaling={true}
            style={
              [
                {
                  "fontFamily": "odido_Heading_Medium",
                },
                {
                  "color": "#000000",
                  "fontSize": 36,
                  "fontWeight": "500",
                  "letterSpacing": 0.36000001430511475,
                  "lineHeight": 40,
                  "marginVertical": 0,
                  "textAlign": "left",
                },
                [
                  {
                    "color": "#000000",
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "textAlign": "center",
                  },
                  {
                    "fontSize": 28,
                    "letterSpacing": 0.2800000011920929,
                    "lineHeight": 32,
                    "paddingTop": 0,
                  },
                ],
              ]
            }
            testID="undefined-title_heading"
          >
            Title
          </Text>
          <View
            style={
              [
                {
                  "alignItems": "flex-end",
                },
                {
                  "minHeight": 32,
                  "paddingTop": 0,
                },
              ]
            }
          >
            <View>
              <View
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": false,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                role="button"
                style={
                  [
                    {
                      "alignSelf": "flex-start",
                    },
                    undefined,
                  ]
                }
                testID="undefined-right-action-button-right_button"
              >
                <View
                  collapsable={false}
                  jestAnimatedStyle={
                    {
                      "value": {
                        "backgroundColor": "rgba(255, 255, 255, 1)",
                        "borderColor": "rgba(0, 0, 0, 0)",
                      },
                    }
                  }
                  style={
                    {
                      "alignItems": "center",
                      "alignSelf": "flex-start",
                      "backgroundColor": "rgba(255, 255, 255, 1)",
                      "borderColor": "rgba(0, 0, 0, 0)",
                      "borderRadius": 100,
                      "borderStyle": "solid",
                      "borderWidth": 0,
                      "flexDirection": "row",
                      "gap": 8,
                      "justifyContent": "center",
                      "paddingHorizontal": 16,
                      "paddingVertical": 8,
                    }
                  }
                  testID="undefined-right-action-button-right_button-visual"
                >
                  <View
                    onLayout={[Function]}
                    style={
                      {
                        "alignItems": "center",
                        "flexDirection": "row",
                        "gap": 8,
                        "justifyContent": "center",
                      }
                    }
                  >
                    <Text>
                      <Text
                        collapsable={false}
                        jestAnimatedStyle={
                          {
                            "value": {
                              "color": "rgba(0, 0, 0, 1)",
                            },
                          }
                        }
                        style={
                          {
                            "color": "rgba(0, 0, 0, 1)",
                          }
                        }
                      >
                        <Text
                          allowFontScaling={true}
                          style={
                            [
                              {
                                "fontFamily": "Icons_Outline_SM_odido",
                                "fontSize": 16,
                                "lineHeight": 16,
                                "width": 16,
                              },
                              [
                                {
                                  "display": "flex",
                                },
                                false,
                              ],
                            ]
                          }
                          testID="base-button-icon"
                        >
                          
                        </Text>
                      </Text>
                    </Text>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`WithLeftAction LocalNavigation renders a stable snapshot 1`] = `
<View
  style={
    {
      "backgroundColor": "#383838",
      "padding": 40,
    }
  }
>
  <View
    style={
      [
        {
          "alignSelf": "baseline",
          "overflow": "hidden",
        },
        {
          "aspectRatio": "auto",
        },
        [
          {
            "backgroundColor": "#ffffff",
          },
          {
            "alignSelf": "auto",
          },
        ],
      ]
    }
    testID="background"
  >
    <View
      style={
        [
          {
            "paddingBottom": 12,
            "paddingHorizontal": 8,
            "paddingTop": 8,
            "rowGap": 8,
          },
          false,
        ]
      }
    >
      <View>
        <View
          style={
            [
              {
                "flexDirection": "row",
                "justifyContent": "space-between",
              },
              {
                "minHeight": 40,
                "paddingTop": 4,
              },
            ]
          }
        >
          <View
            style={
              [
                {
                  "alignItems": "flex-start",
                },
                false,
              ]
            }
          >
            <View>
              <Text
                onPress={[Function]}
                role="button"
                style={
                  {
                    "display": "flex",
                    "fontFamily": "odido_Paragraph_Link",
                    "fontSize": 16,
                    "letterSpacing": 0.23999999463558197,
                    "lineHeight": 24,
                    "overflow": "visible",
                  }
                }
                testID="link"
              >
                <View
                  style={
                    [
                      {
                        "alignItems": "center",
                        "columnGap": 8,
                        "flexDirection": "row",
                        "gap": 8,
                      },
                    ]
                  }
                >
                  <View
                    style={
                      {
                        "alignItems": "center",
                        "justifyContent": "center",
                      }
                    }
                  >
                    <Text
                      allowFontScaling={true}
                      style={
                        [
                          {
                            "fontFamily": "Icons_Outline_DEFAULT_odido",
                            "fontSize": 24,
                            "lineHeight": 24,
                            "width": 24,
                          },
                          [
                            {
                              "color": "#1b5ee4",
                              "display": "flex",
                              "verticalAlign": "middle",
                            },
                            undefined,
                            false,
                          ],
                        ]
                      }
                      testID="link-icon"
                    >
                      
                    </Text>
                  </View>
                  <Text
                    style={
                      [
                        {
                          "textDecorationLine": "underline",
                          "textDecorationStyle": "solid",
                        },
                        {
                          "color": "#1b5ee4",
                        },
                        {
                          "fontSize": 16,
                          "letterSpacing": 0.23999999463558197,
                          "lineHeight": 24,
                        },
                        {
                          "textDecorationLine": "none",
                          "textDecorationStyle": "solid",
                        },
                        false,
                        undefined,
                      ]
                    }
                    testID="link-text"
                  >
                    Terug
                  </Text>
                </View>
              </Text>
            </View>
          </View>
          <View
            style={
              [
                {
                  "alignItems": "flex-end",
                },
                false,
              ]
            }
          />
        </View>
      </View>
      <View
        style={
          {
            "rowGap": 8,
          }
        }
      >
        <Text
          allowFontScaling={true}
          style={
            {
              "color": "#000000",
              "fontFamily": "odido_Display",
              "fontSize": 48,
              "letterSpacing": 0,
              "lineHeight": 48,
              "marginBottom": 0,
              "marginTop": 0,
              "marginVertical": 32,
              "textAlign": "left",
            }
          }
          testID="undefined-title_display"
        >
          Title
        </Text>
        <Text
          allowFontScaling={true}
          style={
            [
              {
                "fontFamily": "odido_Paragraph_Regular",
              },
              {
                "color": "#000000",
                "fontSize": 18,
                "letterSpacing": 0.27000001072883606,
                "lineHeight": 28,
                "textAlign": "left",
              },
              undefined,
            ]
          }
          testID="undefined-paragraph_paragraph"
        >
          Paragraph
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`WithRightAction LocalNavigation renders a stable snapshot 1`] = `
<View
  style={
    {
      "backgroundColor": "#383838",
      "padding": 40,
    }
  }
>
  <View
    style={
      [
        {
          "alignSelf": "baseline",
          "overflow": "hidden",
        },
        {
          "aspectRatio": "auto",
        },
        [
          {
            "backgroundColor": "#ffffff",
          },
          {
            "alignSelf": "auto",
          },
        ],
      ]
    }
    testID="background"
  >
    <View
      style={
        [
          {
            "paddingBottom": 12,
            "paddingHorizontal": 8,
            "paddingTop": 8,
            "rowGap": 8,
          },
          false,
        ]
      }
    >
      <View>
        <View
          style={
            [
              {
                "flexDirection": "row",
                "justifyContent": "space-between",
              },
              {
                "minHeight": 40,
                "paddingTop": 4,
              },
            ]
          }
        >
          <View
            style={
              [
                {
                  "alignItems": "flex-start",
                },
                false,
              ]
            }
          />
          <View
            style={
              [
                {
                  "alignItems": "flex-end",
                },
                false,
              ]
            }
          >
            <View>
              <Text
                onPress={[Function]}
                role="button"
                style={
                  {
                    "display": "flex",
                    "fontFamily": "odido_Paragraph_Link",
                    "fontSize": 16,
                    "letterSpacing": 0.23999999463558197,
                    "lineHeight": 24,
                    "overflow": "visible",
                  }
                }
                testID="link"
              >
                <View
                  style={
                    [
                      {
                        "alignItems": "center",
                        "columnGap": 8,
                        "flexDirection": "row",
                        "gap": 8,
                      },
                    ]
                  }
                >
                  <Text
                    style={
                      [
                        {
                          "textDecorationLine": "underline",
                          "textDecorationStyle": "solid",
                        },
                        {
                          "color": "#1b5ee4",
                        },
                        {
                          "fontSize": 16,
                          "letterSpacing": 0.23999999463558197,
                          "lineHeight": 24,
                        },
                        {
                          "textDecorationLine": "none",
                          "textDecorationStyle": "solid",
                        },
                        false,
                        undefined,
                      ]
                    }
                    testID="link-text"
                  >
                    Action right
                  </Text>
                  <View
                    style={
                      {
                        "alignItems": "center",
                        "justifyContent": "center",
                      }
                    }
                  >
                    <Text
                      allowFontScaling={true}
                      style={
                        [
                          {
                            "fontFamily": "Icons_Outline_DEFAULT_odido",
                            "fontSize": 24,
                            "lineHeight": 24,
                            "width": 24,
                          },
                          [
                            {
                              "color": "#1b5ee4",
                              "display": "flex",
                              "verticalAlign": "middle",
                            },
                            undefined,
                            false,
                          ],
                        ]
                      }
                      testID="link-icon"
                    >
                      
                    </Text>
                  </View>
                </View>
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          {
            "rowGap": 8,
          }
        }
      >
        <Text
          allowFontScaling={true}
          style={
            {
              "color": "#000000",
              "fontFamily": "odido_Display",
              "fontSize": 48,
              "letterSpacing": 0,
              "lineHeight": 48,
              "marginBottom": 0,
              "marginTop": 0,
              "marginVertical": 32,
              "textAlign": "left",
            }
          }
          testID="undefined-title_display"
        >
          Title
        </Text>
        <Text
          allowFontScaling={true}
          style={
            [
              {
                "fontFamily": "odido_Paragraph_Regular",
              },
              {
                "color": "#000000",
                "fontSize": 18,
                "letterSpacing": 0.27000001072883606,
                "lineHeight": 28,
                "textAlign": "left",
              },
              undefined,
            ]
          }
          testID="undefined-paragraph_paragraph"
        >
          Paragraph
        </Text>
      </View>
    </View>
  </View>
</View>
`;
